<resources>
    <string name="app_name">Khedut Mitra</string>
    <string name="all_in_one_farmer_app">All In one Farmer App.</string>
    <string name="reg_form">રેજીસ્ટ્રેશન ફોર્મ</string>
    <string name="pwd">પાસવર્ડ</string>


    <!--Titles-->
    <string name="first_slide_title">હવામાન અને વરસાદની આગાહીની વિગતો મેળવો.</string>
    <string name="second_slide_title">ખેડૂતો માટે સરકારી યોજના.</string>
    <string name="third_slide_title">દરેક માર્કેટિંગ યાર્ડની વિગતો.</string>
    <string name="fourth_slide_title">ખેડૂતોની સફળતાની વાર્તાઓ અને ખેતીની ટેકનિક વીડિયો અને સમાચાર.</string>
    <!--Descriptions-->
    <string name="first_slide_desc">આગામી ૫ થી ૭ દિવસ સુધી ના હવામાન અને વરસાદની આગાહીની વિગતો મેળવો. </string>
    <string name="second_slide_desc">ખેડૂતોને લગતી સરકારી યોજનાઓ જે નોંધાયેલ કૃષિ યુનિવર્સિટીઓ દ્વારા પ્રમાણિત છે.</string>
    <string name="third_slide_desc">દરેક માર્કેટ યાર્ડના દૈનિક ભાવ મેળવો.</string>
    <string name="fourth_slide_desc">અન્ય ખેડૂતો દ્વારા ઉપયોગમાં લેવાતા સમાચાર,આર્ટિલેસ અને નવી ખેતીની તકનીકોથી પરિચિત થાવ.</string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">એપ્લિકેશન શરૂ કરો.</string>
    <string name="pak_rak">પાક સંરક્ષણ શું છે?</string>
    <string name="pak_rak1">પાક સંરક્ષણ એ સામાન્ય પદ્ધતિ છે અથવા જીવાતો, નિંદણ, છોડના રોગો અને કૃષિ પાકને નુકસાન પહોંચાડતા અન્ય સજીવો સહિતના વિવિધ એજન્ટોથી પાકની ઉપજનું રક્ષણ કરવાની પ્રથા છે.</string>
    <string name="pak__rak2">પાકની સાથે, કૃષિ ક્ષેત્રોમાં નીંદણ, નાના પ્રાણીઓ જેવા કે ઉંદરો, જીવાત, જંતુઓ, જીવાતો, રોગ પેદા કરનારા પેથોજેન્સ અને નિયમિતપણે પક્ષીઓ દ્વારા દરોડા પાડવામાં આવશે. આ પરિબળો મુખ્યત્વે પાકને થયેલા નુકસાન અથવા નુકસાન માટે જવાબદાર છે. આમ પાકનું ઊંચું ઉત્પાદન થાય તે માટે ખેડૂતોને પાકને આ જીવાતોથી બચાવવાનો મોકો મળ્યો હતો. તેથી, વાવેતર પહેલાં, દરમિયાન અને પછી પાક સંરક્ષણ વ્યવસ્થાપન મહત્વપૂર્ણ છે.</string>
    <string name="pak_rak3">પાક સંરક્ષણની પદ્ધતિઓ શું છે?</string>
    <string name="pak_rak4">ઘણા પાક સંરક્ષણ સાધનો અને પદ્ધતિઓ છે, જેનો અમલ ખેડૂતો તેમના પાકની સફળતાને વિસ્તૃત કરવા માટે કરી શકે છે.</string>
    <string name="pak_rak5">જંતુઓ અને જીવાતો બંને પાકના નુકસાન અને ઉપજના નુકસાન માટેનું મુખ્ય સમજૂતી છે. તેઓ આખા પાકને બરબાદ કરી શકે છે અને અનાજનો મોટો ભાગ ખાઈ શકે છે. હકીકતમાં, જો તેમને અંકુશમાં લેવામાં નહીં આવે તો તેઓ પાકના ઉત્પાદનમાં વાર્ષિક 30–50 (%) નો ઘટાડો કરશે. સંકલિત જીવાત અને બગ મેનેજમેન્ટનો સમાવેશ કરીને પાકના નુકસાનને સુરક્ષિત રાખવાની સૌથી સરળ રીતો છે. જંતુનાશકો, જંતુનાશકોનો છંટકાવ કરવાથી જંતુઓ અને અન્ય જીવાતોને નિયંત્રિત કરીને પાકને થતા નુકસાનને ઓછું કરવામાં મદદ મળે છે.</string>
    <string name="pak_rak6">ખેતી પછી પાક રક્ષણ</string>
    <string name="pak_rak7">એક વખત પાક પાક્યા પછી હવે તેની લણણી થવી જ જોઈએ. કાપણીને પરિપક્વ પાકને કાપવા અને એકત્રિત કરવા તરીકે વ્યાખ્યાયિત કરી શકાય છે. લણણી શબ્દમાં સામાન્ય રીતે લણણી પછીની પદ્ધતિઓ જેવી કે થ્રેશિંગ અને વિનોવિંગનો પણ સમાવેશ થાય છે. અમને આ બન્ને પ્રક્રિયાઓ ચકાસવાની પરવાનગી આપો</string>
    <string name="pak_rak8">જળવાયુ પરિવર્તનની પાક પર અસર</string>
    <string name="pak_rak9">આપણે કદાચ તેને અનુભવી ન શકીએ, પરંતુ જે રીતે આપણે આબોહવા પરિવર્તનને માનવ જીવનના લગભગ દરેક પાસાને અસર કરતા જોઈ શકીએ છીએ, તે જ રીતે કોઈ પણ જોઈ શકે છે કે તે પાક સંરક્ષણને પણ અસર કરે છે.</string>
    <string name="pak_rak10">આબોહવા પરિવર્તન નિંદણ, જીવાતો અને રોગકારક રોગોની ઇકોસિસ્ટમને અસર કરે છે. પૃથ્વી પર વાતાવરણીય કાર્બન ડાયોક્સાઇડના વધતા સ્તરને કારણે વૈશ્વિક તાપમાનમાં ચિંતાજનક વધારો થાય છે, જે માને છે કે નહીં, તે જમીનની ઇકોલોજીને પણ અસર કરે છે. આ બદલાતા સંજોગોની સંશોધનકારો અને વ્યાવસાયિકો દ્વારા કૃષિ પરિપ્રેક્ષ્યથી તપાસ કરવામાં આવે તે જરૂરી છે.</string>
    <string name="pak_rak11">જીવાતો અને જંતુઓનું વ્યવસ્થાપન</string>
    <string name="pak_rak12">જંતુ સમુદાયની વ્યાપક પેટર્ન અને ગ્લોબલ વોર્મિંગને કારણે શાકાહારીના દર પરની અસરોનો અભ્યાસ કરવાની જરૂર છે. આ જંતુનાશકોના ઉપયોગને અસરકારક રીતે નક્કી કરશે જે જંતુની પ્રજાતિઓને પ્રતિરોધક બનતા અટકાવે છે. આમાંનો એક માર્ગ એ છે કે આ જીવાતોના કુદરતી દુશ્મનોની હત્યાને અટકાવે તેવી તકનીકોનો ઉપયોગ કરવો જે કુદરતી સ્પર્ધાને કારણે જીવાતને પાકથી દૂર રાખી શકે છે.</string>

    <string name="loading">Loading...</string>

    <string name="hyperlink"><a href="https://pmksy.gov.in/">pmksy</a></string>
    <string name="hyperlink1"><a href="https://pmkisan.gov.in/">pmksn</a></string>
    <string name="hyperlink2"><a href="https://maandhan.in/">pmkmdy</a></string>

    <string-array name="states">
        <item>Gujarat</item>
    </string-array>
    <string-array name="districts">
        <item>Ahmedabad</item>
        <item>Amreli</item>
        <item>Anand</item>
        <item>Chandigarh</item>
        <item>Chittor</item>
        <item>Jamnagar</item>
        <item>Rajkot</item>
        <item>Samastipur</item>
        <item>Surajpur</item>
    </string-array>
</resources>