<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cropprotect">
    <LinearLayout
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <io.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:background="@drawable/gradient1"
            android:layout_height="250dp"
            android:elevation="4dp"
            app:shape_arc_height="20dp"
            android:layout_gravity="center"
            app:shape_arc_position="bottom"
            >

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mfarm0"
                app:lottie_rawRes="@raw/plant"
                app:lottie_autoPlay="true"
                android:layout_gravity="center"
                app:lottie_loop="true"/>

        </io.github.florent37.shapeofview.shapes.ArcView>
        <io.github.florent37.shapeofview.shapes.RoundRectView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp"
            android:layout_margin="10dp"
            app:shape_roundRect_bottomLeftRadius="10dp"
            app:shape_roundRect_bottomRightRadius="10dp"
            app:shape_roundRect_topLeftRadius="10dp"
            app:shape_roundRect_topRightRadius="10dp"
            android:layout_gravity="center"
            app:shape_roundRect_borderColor="@color/g1"
            app:shape_roundRect_borderWidth="2dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/img" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/gradient1"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pak_rak"
                    android:textSize="20sp"
                    android:transitionName="logo_text"
                    android:fontFamily="@font/vadodarabold"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/g3"
                    />
                <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pak_rak1"
                    android:textSize="11sp"
                    android:transitionName="logo_text"
                    android:fontFamily="@font/vadodarabold"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/g2"
                    />
                <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/pak__rak2"
                    android:transitionName="logo_text"
                    android:fontFamily="@font/vadodarabold"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/g2" />
                <ImageView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/crop"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/gradient1"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"/>
                   <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pak_rak3"
                android:textSize="20sp"
                android:transitionName="logo_text"
                android:fontFamily="@font/vadodarabold"
                android:layout_marginTop="2dp"
                android:textColor="@color/g3"
                />
                <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pak_rak4"
                    android:textSize="11sp"
                    android:transitionName="logo_text"
                    android:fontFamily="@font/vadodarabold"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/g2"
                    />
                <ImageView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/c1"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/gradient1"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pak_rak11"
                    android:textSize="20sp"
                    android:transitionName="logo_text"
                    android:fontFamily="@font/vadodarabold"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/g3"
                    />
<!--                <TextView-->
<!--                    android:gravity="center"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/pak_rak5"-->
<!--                    android:textSize="11sp"-->
<!--                    android:transitionName="logo_text"-->
<!--                    android:fontFamily="@font/vadodarabold"-->
<!--                    android:layout_marginTop="2dp"-->
<!--                    android:textColor="@color/g1"-->
<!--                    />-->
<!--                <ImageView-->
<!--                    android:layout_marginTop="5dp"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="100dp"-->
<!--                    android:src="@drawable/c2"/>-->
<!--                <View-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="2dp"-->
<!--                    android:background="@drawable/gradient1"-->
<!--                    android:layout_marginTop="7dp"-->
<!--                    android:layout_marginRight="10dp"-->
<!--                    android:layout_marginLeft="10dp"/>-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/pak_rak6"-->
<!--                    android:textSize="20sp"-->
<!--                    android:transitionName="logo_text"-->
<!--                    android:fontFamily="@font/vadodarabold"-->
<!--                    android:layout_marginTop="2dp"-->
<!--                    android:textColor="@color/g3"-->
<!--                    />-->
<!--                <TextView-->
<!--                    android:gravity="center"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/pak_rak7"-->
<!--                    android:textSize="11sp"-->
<!--                    android:transitionName="logo_text"-->
<!--                    android:fontFamily="@font/vadodarabold"-->
<!--                    android:layout_marginTop="2dp"-->
<!--                    android:textColor="@color/g1"-->
<!--                    />-->
<!--                <ImageView-->
<!--                    android:layout_marginTop="5dp"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="100dp"-->
<!--                    android:src="@drawable/c3"/>-->
<!--                <View-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="2dp"-->
<!--                    android:background="@drawable/gradient1"-->
<!--                    android:layout_marginTop="7dp"-->
<!--                    android:layout_marginRight="10dp"-->
<!--                    android:layout_marginLeft="10dp"/>-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/pak_rak8"-->
<!--                    android:textSize="20sp"-->
<!--                    android:transitionName="logo_text"-->
<!--                    android:fontFamily="@font/vadodarabold"-->
<!--                    android:layout_marginTop="2dp"-->
<!--                    android:textColor="@color/g3"-->
<!--                    />-->
<!--                <TextView-->
<!--                    android:gravity="center"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/pak_rak9"-->
<!--                    android:textSize="11sp"-->
<!--                    android:transitionName="logo_text"-->
<!--                    android:fontFamily="@font/vadodarabold"-->
<!--                    android:layout_marginTop="2dp"-->
<!--                    android:textColor="@color/g1"-->
<!--                    />-->
<!--                <TextView-->
<!--                    android:gravity="center"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/pak_rak10"-->
<!--                    android:textSize="11sp"-->
<!--                    android:transitionName="logo_text"-->
<!--                    android:fontFamily="@font/vadodarabold"-->
<!--                    android:layout_marginTop="2dp"-->
<!--                    android:textColor="@color/g1"-->
<!--                    />-->
<!--                <TextView-->
<!--                    android:gravity="center"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/pak_rak12"-->
<!--                    android:textSize="11sp"-->
<!--                    android:transitionName="logo_text"-->
<!--                    android:fontFamily="@font/vadodarabold"-->
<!--                    android:layout_marginTop="2dp"-->
<!--                    android:textColor="@color/g1"-->
<!--                    />-->
<!--                <ImageView-->
<!--                    android:layout_marginTop="5dp"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="100dp"-->
<!--                    android:src="@drawable/c5"/>-->
<!--                <View-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="2dp"-->
<!--                    android:background="@drawable/gradient1"-->
<!--                    android:layout_marginTop="7dp"-->
<!--                    android:layout_marginRight="10dp"-->
<!--                    android:layout_marginLeft="10dp"/>-->
            </LinearLayout>
        </io.github.florent37.shapeofview.shapes.RoundRectView>
    </LinearLayout>
</ScrollView>
